--- a/express/package.json
+++ b/express/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "vows test/* --spec"
   },
   "dependencies": {
     "body-parser": "~1.13.2",
@@ -13,5 +14,8 @@
     "express": "~4.13.1",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "vows": "^0.8.1"
   }
 }
