--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
-  "name": "scholarly.vernacular.io",
+  "name": "xr86.tw-project.io",
   "private": true,
   "version": "0.0.1",
-  "description": "Markedly Smart",
+  "description": "CoDr",
   "main": "index.html",
   "repository": {
     "type": "git",
-    "url": "https://github.com/scienceai/scholarly.vernacular.io.git"
+    "url": "https://github.com/xR86/tw-project.git"
   },
   "keywords": [
     "HTML",
-    "vernacular",
+    "tw-project",
+    "CoDr",
     "scholarly"
   ],
-  "author": "Robin Berjon <robin@standardanalytics.io>",
+  "author": "Dan Alexandru <dan.alexandru@info.uaic.ro>",
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/scienceai/scholarly.vernacular.io/issues"
+    "url": "https://github.com/xR86/tw-project/issues"
   },
-  "homepage": "http://scholarly.vernacular.io/",
+  "homepage": "https://xr86.github.io/tw-project",
   "dependencies": {
     "normalize.css": "3.0.3",
     "prismjs": "1.3.0"
