--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "~2.3.3",
     "express": "~4.13.1",
     "morgan": "~1.6.1",
+    "oracledb": "^1.8.0",
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
