--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "test": "vows test/* --spec"
   },
   "dependencies": {
+    "bcrypt": "^0.8.6",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
+    "jsonwebtoken": "^7.0.0",
     "morgan": "~1.6.1",
     "oracledb": "^1.8.0",
     "serve-favicon": "~2.3.0"
