--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
+    "express-session": "^1.13.0",
     "jsonwebtoken": "^7.0.0",
     "morgan": "~1.6.1",
     "oracledb": "^1.8.0",
