improved security, added user input sanitization

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "jsonwebtoken": "^7.0.0",
     "morgan": "~1.6.1",
     "oracledb": "^1.8.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "validator": "^5.3.0"
   },
   "devDependencies": {
     "vows": "^0.8.1"
