--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "validator": "^5.3.0"
   },
   "devDependencies": {
+    "grunt": "^1.0.1",
+    "grunt-contrib-cssmin": "^1.0.1",
     "vows": "^0.8.1"
   }
 }
