--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-session": "^1.13.0",
     "jsonwebtoken": "^7.0.0",
     "morgan": "~1.6.1",
+    "nodemailer": "^0.7.1",
     "oracledb": "^1.8.0",
     "serve-favicon": "~2.3.0",
     "simple-oracledb": "^0.1.66",
