--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "oracledb": "^1.8.0",
     "serve-favicon": "~2.3.0",
     "simple-oracledb": "^0.1.66",
-    "validator": "^5.3.0"
+    "validator": "^5.3.0",
+    "winston": "^2.2.0",
+    "winston-daily-rotate-file": "^1.1.1"
   },
   "devDependencies": {
     "grunt": "^1.0.1",
