--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,1 @@
-node_modules/.bin/*
-node_modules/body-parser/*
-node_modules/cookie-parser/*
-node_modules/debug/*
-node_modules/ejs/*
-node_modules/express/*
-node_modules/morgan/*
-node_modules/serve-favicon/*
-node_modules/vows/*
+node_modules/*
