--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "bcrypt": "^0.8.6",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
+    "d3": "^3.5.17",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
     "express-session": "^1.13.0",
+    "fs": "0.0.2",
+    "jsdom": "^9.2.1",
     "jsonwebtoken": "^7.0.0",
     "morgan": "~1.6.1",
     "nodemailer": "^0.7.1",
