--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-session": "^1.13.0",
     "fs": "0.0.2",
     "jsdom": "^9.2.1",
+    "js2xmlparser": "^1.0.0",
     "jsonwebtoken": "^7.0.0",
     "morgan": "~1.6.1",
     "nodemailer": "^0.7.1",
@@ -25,7 +26,8 @@
     "simple-oracledb": "^0.1.66",
     "validator": "^5.3.0",
     "winston": "^2.2.0",
-    "winston-daily-rotate-file": "^1.1.1"
+    "winston-daily-rotate-file": "^1.1.1",
+    "xml": "^1.0.1"
   },
   "devDependencies": {
     "grunt": "^1.0.1",
