--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "xml": "^1.0.1"
   },
   "devDependencies": {
+    "bower": "^1.7.9",
     "grunt": "^1.0.1",
+    "grunt-bowercopy": "^1.2.4",
     "grunt-contrib-cssmin": "^1.0.1",
     "grunt-contrib-watch": "^1.0.0",
     "vows": "^0.8.1"
